--- a/k8s-manifests/services/merged-ollama-backend.yaml
+++ b/k8s-manifests/services/merged-ollama-backend.yaml
@@ -24,7 +24,7 @@ spec:
       initContainers:
         # Init container to pre-download TTS and Whisper models
         - name: download-models
-          image: "localhost:5000/jarvis-backend:v1.3v3"
+          image: "dulc3/jarvis-backend:v2"
           imagePullPolicy: Always
           command: ["/app/entrypoint.sh", "download-models"]
           env:
@@ -87,7 +87,7 @@ spec:
 
         # Harvis Backend container (shares GPU with Ollama)
         - name: harvis-backend
-          image: "localhost:5000/jarvis-backend:latest"
+          image: "dulc3/jarvis-backend:latest"
           imagePullPolicy: Always
           ports:
             - name: http
