--- a/python_back_end/requirements.txt
+++ b/python_back_end/requirements.txt
@@ -57,6 +57,7 @@ trafilatura>=1.6.0
 rank-bm25>=0.2.2
 
 youtube-transcript-api>=0.6.0
+yt-dlp>=2024.0.0
 pypdf>=3.0.0
 python-magic>=0.4.27
 python-docx
